# Copyright © 2024 The Johns Hopkins Applied Physics Laboratory LLC.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version
# 3, as published by the Free Software Foundation.  If you
# would like to purchase a commercial license for this software, please
# contact APL’s Tech Transfer at 240-592-0817 or
# techtransfer@jhuapl.edu.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "constellation-consensus"
description = "Consensus component for the Constellation distributed systems platform"
version = "0.0.0"
authors = [ "Eric McCorkle <eric.mccorkle@jhuapl.edu>" ]
rust-version = "1.81"
license = "AGPL-3.0-only"
keywords = ["networking", "distributed systems", "consensus"]
categories = ["network-programming"]
exclude = [
    ".gitignore"
]
edition = "2018"

[[bin]]
name = "constellation-consensus"
required-features = ["standalone"]

[features]
default = ["dtls", "log", "openssl", "socks5", "standalone", "tls", "unix"]
dtls = ["constellation-channels/dtls"]
gssapi = ["constellation-auth/gssapi",
          "constellation-channels/gssapi",
          "constellation-common/gssapi",
          "constellation-consensus-common/gssapi",
          "constellation-streams/gssapi"]
log = ["dep:log",
       "constellation-auth/log",
       "constellation-channels/log",
       "constellation-common/log",
       "constellation-consensus-common/log",
       "constellation-pbft/log",
       "constellation-standalone?/log",
       "constellation-streams/log"]
openssl = ["constellation-auth/openssl",
           "constellation-channels/openssl",
           "constellation-common/openssl",
           "constellation-consensus-common/openssl",
           "constellation-streams/openssl"]
socks5 = ["constellation-channels/socks5"]
standalone = ["dep:constellation-standalone",
              "dep:constellation-pbft"]
tls = ["constellation-channels/tls"]
unix = ["constellation-auth/unix",
        "constellation-channels/unix",
        "constellation-common/unix",
        "constellation-streams/unix"]

[dependencies]
bitvec = { version = "1.0" }
constellation-auth = { git = "https://github.com/constellation-system/constellation-auth.git", branch = "import", default-features = false }
constellation-channels = { git = "https://github.com/constellation-system/constellation-channels.git", branch = "import", default-features = false }
constellation-common = { git = "https://github.com/constellation-system/constellation-common.git", branch = "import", default-features = false }
constellation-consensus-common = { git = "https://github.com/constellation-system/constellation-consensus-common.git", branch = "import", default-features = false }
constellation-pbft = { git = "https://github.com/constellation-system/constellation-pbft.git", branch = "import", default-features = false, optional = true }
constellation-standalone = { git = "https://github.com/constellation-system/constellation-standalone.git", branch = "import", default-features = false, optional = true }
constellation-streams = { git = "https://github.com/constellation-system/constellation-streams.git", branch = "test-config", default-features = false }
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = { version = "0.10" }
serde_yaml = { version = "0.9" }
